--- a/1.html
+++ b/1.html
@@ -15,7 +15,7 @@
 <p id = "test">
 </p>
 <script type="text/javascript">
-	document.getElementById('test').innerHTML = 'tsdfsadf';
+	document.getElementById('test').innerHTML = 'sample121';
 </script>
 </body>
 </html>
